--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,12 @@ attrs==21.4.0
 av==8.1.0
 backcall==0.2.0
 bidict==0.21.4
-black==22.1.0
 bleach==4.1.0
 cachetools==5.0.0
 certifi==2021.10.8
 cffi==1.15.0
 chardet==3.0.4
-click==8.0.4
+click<8.0
 crc32c==2.2.post0
 crypten==0.1
 cryptography==36.0.1
@@ -34,13 +33,11 @@ google-auth-oauthlib==0.4.6
 grpcio==1.43.0
 hydra-core==1.1.0.dev5
 idna==2.8
-imageio==2.19.0
 importlib-metadata==4.11.1
 importlib-resources==1.5.0
 ipykernel==6.9.1
 ipython==7.31.1
 ipython-genutils==0.2.0
-isort==5.10.1
 itsdangerous==1.1.0
 jedi==0.18.1
 Jinja2==2.11.3
@@ -80,7 +77,7 @@ pathtools==0.1.2
 pexpect==4.8.0
 phe==1.4.0
 pickleshare==0.7.5
-Pillow==9.1.0
+Pillow==6.2.2
 platformdirs==2.5.1
 prometheus-client==0.13.1
 promise==2.3
@@ -108,8 +105,6 @@ requests-oauthlib==1.3.1
 requests-toolbelt==0.9.1
 RestrictedPython==5.2
 rsa==4.8
-scikit-image==0.19.2
-scikit-learn==1.0.2
 scipy==1.4.1
 Send2Trash==1.8.0
 sentry-sdk==1.5.5
