--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-export PROJECT_ROOT= # here goes your current directory i.e.  "/home/rtaiello/PycharmProjects/PP_Image_Registration"
+export PROJECT_ROOT= /user/rtaiello/home/Downloads/pp_image_registration # here goes your current directory i.e.  "/home/rtaiello/PycharmProjects/PP_Image_Registration"
 export DATA_ROOT=${PROJECT_ROOT}/data
